cmake_minimum_required(VERSION 3.23)
project(pro13_C++_study)

set(CMAKE_CXX_STANDARD 14)



#add_executable(test STL_paixu/test.cpp)
#add_executable(test2 STL_paixu/test2.cpp)
#add_executable(test3 STL_paixu/test3.cpp)
#add_executable(test4 STL_paixu/test4.cpp)
#add_executable(test STL_kaobei/test.cpp)
#add_executable(test2 STL_kaobei/test2.cpp)
#add_executable(test3 STL_kaobei/test3.cpp)
#add_executable(test4 STL_kaobei/test4.cpp)
add_executable(test1 STL_suanshushengcheng/test1.cpp)
add_executable(test2 STL_suanshushengcheng/test2.cpp)
add_executable(test STL_jihe/test.cpp)
add_executable(test3 STL_jihe/test3.cpp)